fix stylelint errors

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,9 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
