add ui Button component

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,7 @@
 $color-white: #FFFFFF;
+$color-light-gray: #EEEEEE;
+$color-gray: #AAAAAA;
 $color-black: #222222;
 $color-blue: #53C1DE;
+
+$global-radius: .5rem;
