--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,15 @@
 $color-white: #FFFFFF;
-$color-light-gray: #EEEEEE;
-$color-gray: #AAAAAA;
+$color-gray-100: #FAFAFA;
+$color-gray-200: #F5F5F5;
+$color-gray-300: #EEEEEE;
+$color-gray-400: #E0E0E0;
+$color-gray-500: #BDBDBD;
+$color-gray-600: #9E9E9E;
+$color-gray-700: #757575;
+$color-gray-800: #616161;
+$color-gray-900: #424242;
 $color-black: #222222;
+
 $color-blue: #53C1DE;
 
 $global-radius: .5rem;
