--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,6 @@ html {
 body {
   font-size: 1.6em;
   line-height: 1.6;
-  color: $color-black;
+  color: $color-gray-900;
   font-family: sans-serif;
 }
