add material design colors repo mention

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,3 +1,8 @@
+/*
+ * Material Design color palette
+ * https://github.com/rtivital/material-design-colors
+ */
+
 $color-white: #FFFFFF;
 $color-black: #000000;
 
