add noscript tag to default template

--- a/template.ejs
+++ b/template.ejs
@@ -7,6 +7,10 @@
     <title>React Pages Boilerplate</title>
   </head>
   <body>
+    <noscript>
+      Enable JavaScript to see content on this page
+    </noscript>
+    
     <div id="app"></div>
   </body>
 </html>
