--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,5 +15,5 @@ body {
   font-size: 1.6em;
   line-height: 1.6;
   color: $color-gray-900;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
