--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,6 @@ html {
 body {
   font-size: 1.6em;
   line-height: 1.6;
-  color: $color-gray-900;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  color: $color-black;
+  font-family: $font-family;
 }
