--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,2 @@
 $global-radius: 3px;
+$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
