--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -14,6 +14,5 @@ html {
 body {
   font-size: 1.6em;
   line-height: 1.6;
-  color: $color-black;
-  font-family: $font-family;
+  font-family: sans-serif;
 }
